# EchoScribe

./: Dockerfile  README.md  README_1.md  pyproject.toml  requirements.txt
audio_pipeline/: pipeline.py
audio_pipeline/modules/: convert_json_to_srt.py  convert_srt_to_script.py  correct_json_output.py  merge_str_by_chunk.py  treat_flac_tracks.py
chronicleWeave/: __init__.py  pipeline.py
chronicleWeave/modules/: __init__.py  audio_chunker.py  convert_json_to_srt.py  convert_srt_to_script.py  llm_processor.py  merge_speaker_entries.py  merge_srt_by_chunk.py  whisperx_corrector_core.py
chronicleWeave/modules/prompts/en/: deafult_narrative_prompt.txt  deafult_summary_prompt.txt  default_cumulative_summary_prompt.txt
chronicleWeave/modules/prompts/fr/: deafult_narrative_prompt.txt  deafult_summary_prompt.txt
echoscribe/: __init__.py  pipeline.py
echoscribe/modules/: __init__.py  audio_chunker.py  convert_json_to_srt.py  convert_srt_to_script.py  llm_processor.py  merge_speaker_entries.py  merge_srt_by_chunk.py  treat_flac_tracks.py  whisperx_corrector_core.py
echoscribe/modules/prompts/fr/: default_cumulative_summary_prompt.txt
tests/: test_audio_chunker.py  test_convert_srt_to_script.py  test_merge_speaker_entries.py  test_merge_srt_by_chunk.py  test_whisperx_corrector_core.py
